# seal

./: .dockerignore  .gitignore  Dockerfile  README.md  babel.config.js  bun.lockb  deploy.sh  example.ipynb  nginx.conf  package.json  pyproject.toml  requirements.txt  rsbuild.config.mjs  rsbuild.widget.config.mjs  rspack.config.js  supervisord.conf  update-config.json
.github/workflows/: deploy.yml
js/: seal.jsx  widget.jsx
logo/: favicon.psd  seal.ai
mattress/: main.py
notebooks/: 10_27_seg_fucked.ipynb  11-5-spatial.ipynb  2-25-feat.ipynb  2-26-he-feat.ipynb  2-27-feat.ipynb  3-11.ipynb  3-13.ipynb  3-19.ipynb  3-2-talk.ipynb  3-20.ipynb  3-21.ipynb  3-28.ipynb  3-29.ipynb  3-3.ipynb  3-31.ipynb  3-4.ipynb  4-7.ipynb  6-29-script.py  6-29.ipynb  6-30.ipynb  7-22.ipynb  astro copy.ipynb  astro.ipynb  big_cluster.ipynb  cellcutter.ipynb  cluster_names.ipynb  dan_data.ipynb  demo.ipynb  display_cut_cells.ipynb  exemplar_cluster.ipynb  feature_importance.py  generate_tile.ipynb  generate_umap.ipynb  greg.ipynb  grid.ipynb  lime.ipynb  merge.ipynb  metadata.ipynb  mlp.ipynb  new_channel_names.ipynb  (+17 more)
notebooks/spatial/: real_data_ripley.ipynb  ripley.ipynb  single_script.py
seal/: __init__.py  chunk.py  main.py  resave.py  ripley.py  selection_data.pkl
seal_widget/: __init__.py  main.py  scripts.py
seal_widget/static/: index.css
src/: Seal.css  Seal.jsx  index.css  index.jsx  store.js  webapp.jsx  widget.jsx
src/config/: api.js
src/public/: ChannelSettings.ai  InfoLayer.ai  NeighborhoodIcon.ai  OutlineCluster.ai
src/seal/: __init__.py  seal.jsx
src/views/: Button.css  Button.jsx  LandingPage.css  LandingPage.jsx  SelectionController.jsx  Toolbar.css  Toolbar.jsx  Viewer.jsx
src/views/controller/: BitmaskChannelController.jsx  ChannelOptions.jsx  LayerController.jsx  LayerControllerSubscriber.jsx  LayerOptions.jsx  RasterChannelController.jsx  SpotlightSlider.css  SpotlightSlider.jsx  styles.js
src/views/selectionSummary/: FeatureHeatmap.jsx  HelpTooltip.jsx  LayerOverlays.css  LayerOverlays.jsx  ObsSetsManagerSubscriber.jsx  PopoverMenu.jsx  ScatterPlot.jsx  SelectionColumn.jsx  SelectionSummary.jsx  SelectionSummarySubscriber.jsx  SetDiff.jsx  SetOperationIcon.jsx  StickyHeader.jsx  styles.js
src/views/setsManager/: LayerOverlays.jsx  ObsSetsManagerSubscriber.jsx  SetDiff.css  SetDiff.jsx  styles.css  styles.js
src/views/spotlight/: InfoLayer.jsx  SpotlightBitmaskLayer.js  SpotlightSubscriber.jsx  ToolMenu.jsx
widget/: __init__.py
widget/static/: seal.css  seal.js  seal.mjs
(+3 files in other folders)
