[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seal"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "anywidget",
    "concave-hull>=0.0.9",
    "fastapi>=0.115.6",
    "llvmlite>=0.43.0",
    "locan>=0.19.1",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4",
    "numba>=0.60.0",
    "shap>=0.46.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "ripleyk>=0.0.3",
    "scipy>=1.15.1",
    "tifffile>=2025.1.10",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
    "xgboost>=2.1.3",
    "zarr>=2.18.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "scikit-learn==1.5.2",
    "starlette==0.46.1",
]
readme = "README.md"


# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]




[tool.hatch.build]
only-packages = true
artifacts = ["seal/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["seal/static/index.js"]
skip-if-exists = ["seal/static/index.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "bun"
build_cmd = "widget"
